# path_tracking_catalog

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
notebooks/: bangbang.ipynb  dwa_obstacle_avoidance.ipynb  dwa_pathtracking.ipynb  dynamic_bicycle_model.ipynb  fuzzy.ipynb  kinematic_bicycle_model.ipynb  lqr.ipynb  mppi_obstacle_avoidance.ipynb  mppi_pathtracking.ipynb  pid.ipynb  purepursuit.ipynb  stanley.ipynb  state_feedback.ipynb  unicycle_model.ipynb
notebooks/preliminary/: linear_quadratic_regulator_tutorial.ipynb  state_feedback_control_tutorial.ipynb
